# client-template

./: Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: ci.yml
src/: main.rs
